--- a/desafioDasMensagens/index.html
+++ b/desafioDasMensagens/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Desafio das mensagens</h1>
-    <p>Escreva um texto específico sem utilizar muitos breaks, &lt;br&gt;.</p>
+    <p>Escreva um texto específico (Que contem palavras uma em baixo da outra) sem utilizar muitos breaks, &lt;br&gt;.</p>
     <p>Resposta:</p>
 
     <pre>
