--- a/desafio06-Tags/index.html
+++ b/desafio06-Tags/index.html
@@ -10,8 +10,15 @@
     <p>Usando as citações, coloque mais que 7 elementos e de uma breve explicação de cada um e suas tags.</p>
 
     <ul >
-        <li><abbr title="Se usa com ">Paragrafo</abbr></li>
-        <li></li>
+        <li><abbr title="Se usa com &lt;p&gt; e &lt;/p&gt;, usado para criar Paragrafos">Paragrafo</abbr></li>
+        <li><abbr title="Se usa com &lt;h1&gt; e &lt;/h1&gt;, são tipos de títulos de destaque, o 1 é maior e vai até o 6.">Títulos</abbr></li>
+        <li><abbr title="Listas ordenadas se usa &lt;ol&gt; &lt;/ol&gt; e para listas não ordenadas é &lt;ul&gt; e &lt;/ul&gt;. Cada elemento dentra da lista é feito com item list, &&lt;il&gt; e &lt;/il&gt;">Lista</abbr></li>
+        <li><abbr title="Se usa com &lt;img&gt;, usado para colocar imagens, tanto internas quanto externas">Imagens</abbr></li>
+        <li><abbr title="O &lt;abbr&gt; e &lt;abbr&gt; é usado para criar citações no código">Citações</abbr></li>
+        <li><abbr title="usado dentro das tags &lt;a&gt; e &&lt;/a&gt;, adicionando outros endereços"></abbr>Links</li>
+        <li><abbr title="Se usa o &lt;br&gt; para pular a próxima linha">Quebra de linhas</abbr></li>
+        <li><abbr title="Usado com &lt;strong&gt; e &lt;/strong&lt;, o que estiver dentro desta tag ficará em destaque">Negrito</abbr></li>
+
     </ul>
 </body>
 </html>
