--- a/desafio07-ImagemFlexivel/index.html
+++ b/desafio07-ImagemFlexivel/index.html
@@ -8,5 +8,11 @@
 <body>
     <h1>Desafio da Imagem Flexivel</h1>
     <p>Se trata em colocar uma imagem que se adeque com o espaco da aba </p>
+
+    <picture>
+        <source media="(max-width: 747px)" srcset="imagens/paisagem-p.png" type="image/png">
+        <source media="(max-width: 1207px)" srcset="imagens/paisagem-m.png" type="image/png">
+        <img src="imagens/paisagem-g.png" alt="Imagem da mulhar adimirando a paisagem">
+    </picture>
 </body>
 </html>
