--- a/desafio08-Navegacao/navegacoes/deserto.html
+++ b/desafio08-Navegacao/navegacoes/deserto.html
@@ -13,5 +13,8 @@
         <li><a href="vilaMacabra.html">Vila</a></li>
         <li><a href="mataFechada.html">Floresta</a></li>
     </ul>
+    <ul>
+        <li><a href="../index.html">Voltar pro menu</a></li>
+    </ul>
 </body>
 </html>
