--- a/desafio08-Navegacao/navegacoes/mataFechada.html
+++ b/desafio08-Navegacao/navegacoes/mataFechada.html
@@ -13,5 +13,8 @@
         <li><a href="campoAberto.html">Campo</a></li>
         <li><a href="vilaMacabra.html">Vila</a></li>
     </ul>
+    <ul>
+        <li><a href="../index.html">Voltar pro menu</a></li>
+    </ul>
 </body>
 </html>
