--- a/desafio09-Videos/index.html
+++ b/desafio09-Videos/index.html
@@ -8,19 +8,26 @@
 </head>
 <body>
     <!-- Desafio dos Vídeos, construir um site com alguns elementos gráficos em CSS, e adicionando 4 vídeos para o visitante assistir, quando ele clicar no vídeo vai abrir uma outra aba na qual irá rodar o vídeo, tem que ter um botão para voltar também.-->
-    <h1><strong>Vídeos de qualidade duvidosa</strong></h1>
-    <a href="videos/videoDai.html">
-            <img src="imagens/Dai.jpg" alt="Tumbnail do video 'seu tipo psicológico pode ser uma piada | intuição extrovertida' do canal Dai">
-    </a>
-    <a href="videos/videoGudoki.html">
-            <img src="imagens/Gudoki.jpg" alt="Tumbnail do video 'Você Está IGNORANDO o FUNDAMENTO Mais Importante da ARTE??' do canal Gudoki">
-    </a>
-    <br>
-    <a href="videos/videoReplai.html">
-            <img src="imagens/Replai.jpg" alt="Tumbnail do video 'O melhor presente que posso te dar' do canal Replai">
-    </a>
-    <a href="">
-            <img src="imagens/Ezell.jpg" alt="Tumbnail do video 'Uma Vida Depressiva e Solitária até que Ela Viu...' do canal Ezell">
-    </a>
+    
+    <div>
+            <div>
+                    <h1><strong>Vídeos de qualidade duvidosa</strong></h1>
+            </div>
+            <div>
+                    <a href="videos/videoDai.html">
+                            <img src="imagens/Dai.jpg" alt="Tumbnail do video 'seu tipo psicológico pode ser uma piada | intuição extrovertida' do canal Dai">
+                    </a>
+                    <a href="videos/videoGudoki.html">
+                            <img src="imagens/Gudoki.jpg" alt="Tumbnail do video 'Você Está IGNORANDO o FUNDAMENTO Mais Importante da ARTE??' do canal Gudoki">
+                    </a>
+                    <br>
+                    <a href="videos/videoReplai.html">
+                            <img src="imagens/Replai.jpg" alt="Tumbnail do video 'O melhor presente que posso te dar' do canal Replai">
+                    </a>
+                    <a href="videos/videoEzell.html">
+                            <img src="imagens/Ezell.jpg" alt="Tumbnail do video 'Uma Vida Depressiva e Solitária até que Ela Viu...' do canal Ezell">
+                    </a>
+            </div>
+    </div>
 </body>
 </html>
