--- a/desafio09-Videos/videos/videoDai.html
+++ b/desafio09-Videos/videos/videoDai.html
@@ -10,6 +10,9 @@
     <h1><strong>seu tipo psicológico pode ser uma piada | intuição extrovertida</strong></h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/UkTwO-qhZY8" title="seu tipo psicológico pode ser uma piada | intuição extrovertida" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <br>
-    <p><a href="../index.html"><strong>Voltar</strong></a></p>
+    <a href="../index.html">
+        <img id="back" src="../imagens/apontaEsquerda-semFundo.png" alt="Seta apontando para a esquerda, botão para voltar"
+        width="60">
+    </a>
 </body>
 </html>
