--- a/desafio09-Videos/videos/videoReplai.html
+++ b/desafio09-Videos/videos/videoReplai.html
@@ -10,6 +10,9 @@
     <h1><strong>O melhor presente que posso te dar</strong></h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/9WEe4Fnu-_g?si=hnJC7YTFKTkqIoVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <br>
-    <p><a href="../index.html">Voltar</a></p>
+    <a href="../index.html">
+        <img id="back" src="../imagens/apontaEsquerda-semFundo.png" alt="Seta apontando para a esquerda, botão para voltar"
+        width="60">
+    </a>
 </body>
 </html>
