--- a/desafio08-Navegacao/navegacoes/campoAberto.html
+++ b/desafio08-Navegacao/navegacoes/campoAberto.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navegação</title>
+    <link rel="stylesheet" href="../estilos/style.css">
 </head>
-<body>
+<body id="campo">
     <h1>Desafio da Navegação</h1>
     <p>Campo</p>
     <p>Para onde quer ir?</p>
     <ul>
-        <li><a href="vermelhoRetorcido.html">Floresta Vermlha</a></li>
+        <li><a href="vilaMacabra.html">Vila</a></li>
         <li><a href="deserto.html">Deserto</a></li>
     </ul>
     <ul>
