--- a/desafio08-Navegacao/navegacoes/deserto.html
+++ b/desafio08-Navegacao/navegacoes/deserto.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navegação</title>
+    <link rel="stylesheet" href="../estilos/style.css">
 </head>
-<body>
+<body id="deserto">
     <h1>Desafio da Navegação</h1>
     <p>Você então decide caminhar pelo deserto ensolarado, deixando suas roupas molhadas de soar, cansado depois caminhar por um tempo neste calor, você encontra o que parece ser alugmas casas al longe e do outro lado uma floresta densa</p>
     <p>Para onde quer ir?</p>
