--- a/desafio08-Navegacao/index.html
+++ b/desafio08-Navegacao/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navegação</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
-<body>
+<body id="home">
     <h1>Desafio da Navegação</h1>
     <p>O objetivo do desafio é criar uma navegação simples entra paginas</p>
 
