--- a/desafio08-Navegacao/navegacoes/comeco.html
+++ b/desafio08-Navegacao/navegacoes/comeco.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navegação</title>
+    <link rel="stylesheet" href="../estilos/style.css">
 </head>
-<body>
+<body id="branco">
     <h1>Desafio da Navegação</h1>
     <p>Você caminha e se depara com duas bifurcações, a sua direita há árvores retorcidas com folhas vermlhas, a sua esquerda há uma mata alta completamente fechada.</p>
     <p>Para onde quer ir?</p>
