--- a/desafio08-Navegacao/navegacoes/mataFechada.html
+++ b/desafio08-Navegacao/navegacoes/mataFechada.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navegação</title>
+    <link rel="stylesheet" href="../estilos/style.css">
 </head>
-<body>
+<body id="mata">
     <h1>Desafio da Navegação</h1>
     <p>Escolhendo ir pela floresta fechada, os seus passo sfazem barulhos nas folhas, as árvores criam uma penumbra na aréa que dificulta ao enxergar. Você escuta vários barulhos de animais e ve olhos que brilham neste breu por todos os cantos você encontra um campo aberto e em outra direção alguma casas.</p>
     <p>Para onde quer ir?</p>
