--- a/desafio08-Navegacao/navegacoes/vermelhoRetorcido.html
+++ b/desafio08-Navegacao/navegacoes/vermelhoRetorcido.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navegação</title>
+    <link rel="stylesheet" href="../estilos/style.css">
 </head>
-<body>
+<body id="vermelhoR">
     <h1>Desafio da Navegação</h1>
     <p>Você escolhe ir para o caminha da floresta vermlha, caminhando por um tempo você escuta sons estranhos e as coisas parecem se mexer o tempo todo, é como se qualquer coisa que entra aqui fica estranha e você encontra uma placa escrita com letras tortas:
         Direita - Deserto
