--- a/desafio08-Navegacao/navegacoes/vilaMacabra.html
+++ b/desafio08-Navegacao/navegacoes/vilaMacabra.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navegação</title>
+    <link rel="stylesheet" href="../estilos/style.css">
 </head>
-<body>
+<body id="vila">
     <h1>Desafio da Navegação</h1>
     <p>Para onde quer ir?</p>
     <ul>
         <li><a href="vermelhoRetorcido.html">Floresta Vermelha</a></li>
-        <li><a href="campoAberto.html">Campo</a></li>
+        <li><a href="comeco.html">O branco</a></li>
     </ul>
     <ul>
         <li><a href="../index.html">Voltar pro menu</a></li>
