--- a/desafio09-Videos/index.html
+++ b/desafio09-Videos/index.html
@@ -15,17 +15,17 @@
             </div>
             <div>
                     <a href="videos/videoDai.html">
-                            <img src="imagens/Dai.jpg" alt="Tumbnail do video 'seu tipo psicológico pode ser uma piada | intuição extrovertida' do canal Dai">
+                            <img class="videosClick" src="imagens/Dai.jpg" alt="Tumbnail do video 'seu tipo psicológico pode ser uma piada | intuição extrovertida' do canal Dai">
                     </a>
                     <a href="videos/videoGudoki.html">
-                            <img src="imagens/Gudoki.jpg" alt="Tumbnail do video 'Você Está IGNORANDO o FUNDAMENTO Mais Importante da ARTE??' do canal Gudoki">
+                            <img class="videosClick" src="imagens/Gudoki.jpg" alt="Tumbnail do video 'Você Está IGNORANDO o FUNDAMENTO Mais Importante da ARTE??' do canal Gudoki">
                     </a>
                     <br>
                     <a href="videos/videoReplai.html">
-                            <img src="imagens/Replai.jpg" alt="Tumbnail do video 'O melhor presente que posso te dar' do canal Replai">
+                            <img class="videosClick" src="imagens/Replai.jpg" alt="Tumbnail do video 'O melhor presente que posso te dar' do canal Replai">
                     </a>
                     <a href="videos/videoEzell.html">
-                            <img src="imagens/Ezell.jpg" alt="Tumbnail do video 'Uma Vida Depressiva e Solitária até que Ela Viu...' do canal Ezell">
+                            <img class="videosClick" src="imagens/Ezell.jpg" alt="Tumbnail do video 'Uma Vida Depressiva e Solitária até que Ela Viu...' do canal Ezell">
                     </a>
             </div>
     </div>
