--- a/desafio10-Site/index.html
+++ b/desafio10-Site/index.html
@@ -3,17 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Android</title>
+    <title>Curiosidades de Tecnologia</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <nav></nav>
+        <h1>Curiosidades de Tecnologia</h1>
+        <p>Tudo aquilo que você sempre quis saber sobre o mundo <br> Tech, em um único lugar.</p>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Notícias</a>
+            <a href="#">Curiosidades</a>
+            <a href="#">Fale Conosco</a>
+        </nav>
     </header>
     <main>
-        <section></section>
-        <section></section>
+        <section>
+            <article>
+                <h1> História do Mascote do Android</h1>
+                <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
+                </p>
+            </article>
+            <article>
+                <h3>A Primeira Versão</h3>
+                <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+                <img src="" alt="">
+                <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.
+                </p>
+            </article>
+            <article>
+                <h3>Surge um novo mascote</h3>
+                <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+                <img src="" alt="">
+                <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
+                <img src="" alt="">
+                <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
+                </p>
+                <iframe src="" frameborder="0"></iframe>
+            </article>
+        </section>
+        <section>
+            <h5>Quer aprender mais? </h5>
+            <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
+            <ul>
+                <li><a href="#">1.5 - Cupcake</a></li>
+                <li><a href="#">1.6 - Donut</a></li>
+                <li><a href="#">3.0 - Eclair</a></li>
+                <li><a href="#">2.2 - Froyo</a></li>
+                <li><a href="#">2.3 - Gingerbread</a></li>
+                <li><a href="#">3.0 - Honeycomb</a></li>
+                <li><a href="#">4.0 - Ice Cream Sandwich</a></li>
+            </ul>
+            <aside>
+                <ul>
+                    <li><a href="#">4.1 - Jelly Bean</a></li>
+                    <li><a href="#">4.4 - KitKat</a></li>
+                    <li><a href="#">5.0 - Lolipop</a></li>
+                    <li><a href="#">6.0 - Marshmallow</a></li>
+                    <li><a href="#">7.0 - Nougat</a></li>
+                    <li><a href="#">8.0 - Oreo</a></li>
+                    <li><a href="#">9.0 - Pie</a></li>
+                </ul>
+            </aside>
+            <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
+            </p>
+            <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+        </section>
+        <section>
+            Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.
+        </section>
     </main>
-    <footer></footer>
+    <footer>Site criado por Henrique Xavier, inspirado em Gustavo Guanabara para o CursoemVideo.</footer>
 </body>
 </html>
