--- a/desafio10-Site/index.html
+++ b/desafio10-Site/index.html
@@ -28,7 +28,11 @@
             <article>
                 <h3>A Primeira Versão</h3>
                 <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
-                <img src="" alt="">
+                <picture>
+                    <source media="(max-width: 824px)" srcset="imagens/dan-droids-pq.png" type="image/png" width="434">
+                    <source media="(max-width: 1024px)" srcset="imagens/dan-droids.png" type="image/png" width="800">
+                    <img src="imagens/dan-droids.png" alt="Imagem dos Dandroids" width="1000px">
+                </picture>
                 <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.
                 </p>
             </article>
