--- a/desafio10-Site/index.html
+++ b/desafio10-Site/index.html
@@ -48,34 +48,38 @@
             </article>
         </section>
         <section>
-            <h5>Quer aprender mais? </h5>
-            <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
-            <ul>
-                <li><a href="#">1.5 - Cupcake</a></li>
-                <li><a href="#">1.6 - Donut</a></li>
-                <li><a href="#">3.0 - Eclair</a></li>
-                <li><a href="#">2.2 - Froyo</a></li>
-                <li><a href="#">2.3 - Gingerbread</a></li>
-                <li><a href="#">3.0 - Honeycomb</a></li>
-                <li><a href="#">4.0 - Ice Cream Sandwich</a></li>
-            </ul>
-            <aside>
+            <article>
+                <h5>Quer aprender mais? </h5>
+                <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
                 <ul>
-                    <li><a href="#">4.1 - Jelly Bean</a></li>
-                    <li><a href="#">4.4 - KitKat</a></li>
-                    <li><a href="#">5.0 - Lolipop</a></li>
-                    <li><a href="#">6.0 - Marshmallow</a></li>
-                    <li><a href="#">7.0 - Nougat</a></li>
-                    <li><a href="#">8.0 - Oreo</a></li>
-                    <li><a href="#">9.0 - Pie</a></li>
+                    <li><a href="#">1.5 - Cupcake</a></li>
+                    <li><a href="#">1.6 - Donut</a></li>
+                    <li><a href="#">3.0 - Eclair</a></li>
+                    <li><a href="#">2.2 - Froyo</a></li>
+                    <li><a href="#">2.3 - Gingerbread</a></li>
+                    <li><a href="#">3.0 - Honeycomb</a></li>
+                    <li><a href="#">4.0 - Ice Cream Sandwich</a></li>
                 </ul>
-            </aside>
-            <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
-            </p>
-            <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+                <aside>
+                    <ul>
+                        <li><a href="#">4.1 - Jelly Bean</a></li>
+                        <li><a href="#">4.4 - KitKat</a></li>
+                        <li><a href="#">5.0 - Lolipop</a></li>
+                        <li><a href="#">6.0 - Marshmallow</a></li>
+                        <li><a href="#">7.0 - Nougat</a></li>
+                        <li><a href="#">8.0 - Oreo</a></li>
+                        <li><a href="#">9.0 - Pie</a></li>
+                    </ul>
+                </aside>
+                <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
+                </p>
+                <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+            </article>
         </section>
         <section>
-            Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.
+            <article>
+                <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
+            </article>
         </section>
     </main>
     <footer>Site criado por Henrique Xavier, inspirado em Gustavo Guanabara para o CursoemVideo.</footer>
