--- a/desafio10-Site/index.html
+++ b/desafio10-Site/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Curiosidades de Tecnologia</h1>
         <p>Tudo aquilo que você sempre quis saber sobre o mundo <br> Tech, em um único lugar.</p>
+        <hr>
         <nav>
             <a href="#">Home</a>
             <a href="#">Notícias</a>
@@ -30,8 +31,7 @@
                 <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
                 <picture>
                     <source media="(max-width: 824px)" srcset="imagens/dan-droids-pq.png" type="image/png" width="434">
-                    <source media="(max-width: 1024px)" srcset="imagens/dan-droids.png" type="image/png" width="800">
-                    <img src="imagens/dan-droids.png" alt="Imagem dos Dandroids" width="1000px">
+                    <img src="imagens/dan-droids.png" alt="Imagem dos Dandroids">
                 </picture>
                 <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.
                 </p>
@@ -39,12 +39,15 @@
             <article>
                 <h3>Surge um novo mascote</h3>
                 <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
-                <img src="" alt="">
+                <picture>
+                    <source media="(max-width: 824px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
+                    <img src="imagens/irina-blok.jpg" alt="Foto da Irina Blok">
+                </picture>
                 <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
-                <img src="" alt="">
+                <img src="imagens/bugdroid.png" alt="Foto do bugdroid, mascote da Android">
                 <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
                 </p>
-                <iframe src="" frameborder="0"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/D703WB617WE?si=hV5Xoj7fXY0k6JQE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </article>
         </section>
         <section>
