--- a/desafio10-Site/index.html
+++ b/desafio10-Site/index.html
@@ -13,37 +13,39 @@
         <p>Tudo aquilo que você sempre quis saber sobre o mundo <br> Tech, em um único lugar.</p>
         <hr>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Notícias</a>
-            <a href="#">Curiosidades</a>
-            <a href="#">Fale Conosco</a>
+            <ul id="naveg">
+                <li><a href="#" class="navigation">Home</a></li>
+                <li><a href="#" class="navigation">Notícias</a></li>
+                <li><a href="#" class="navigation">Curiosidades</a></li>
+                <li><a href="#" class="navigation">Fale Conosco</a></li>
+            </ul>
         </nav>
     </header>
     <main>
         <section>
             <article>
                 <h1> História do Mascote do Android</h1>
-                <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
+                <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
                 </p>
             </article>
             <article>
                 <h3>A Primeira Versão</h3>
-                <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+                <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="#">Dan Morrill</a>. Ele conta que abriu o <a href="#">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
                 <picture>
                     <source media="(max-width: 824px)" srcset="imagens/dan-droids-pq.png" type="image/png" width="434">
                     <img src="imagens/dan-droids.png" alt="Imagem dos Dandroids">
                 </picture>
-                <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.
+                <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.
                 </p>
             </article>
             <article>
                 <h3>Surge um novo mascote</h3>
-                <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+                <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="#">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
                 <picture>
                     <source media="(max-width: 824px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
                     <img src="imagens/irina-blok.jpg" alt="Foto da Irina Blok">
                 </picture>
-                <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
+                <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
                 <img src="imagens/bugdroid.png" alt="Foto do bugdroid, mascote da Android">
                 <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
                 </p>
@@ -51,20 +53,20 @@
             </article>
         </section>
         <section>
-            <article>
-                <h5>Quer aprender mais? </h5>
-                <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
-                <ul>
-                    <li><a href="#">1.5 - Cupcake</a></li>
-                    <li><a href="#">1.6 - Donut</a></li>
-                    <li><a href="#">3.0 - Eclair</a></li>
-                    <li><a href="#">2.2 - Froyo</a></li>
-                    <li><a href="#">2.3 - Gingerbread</a></li>
-                    <li><a href="#">3.0 - Honeycomb</a></li>
-                    <li><a href="#">4.0 - Ice Cream Sandwich</a></li>
-                </ul>
-                <aside>
+            <article >
+                <div>
+                    <h5>Quer aprender mais? </h5>
+                </div>
+                <div id="mais">
+                    <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
                     <ul>
+                        <li><a href="#">1.5 - Cupcake</a></li>
+                        <li><a href="#">1.6 - Donut</a></li>
+                        <li><a href="#">3.0 - Eclair</a></li>
+                        <li><a href="#">2.2 - Froyo</a></li>
+                        <li><a href="#">2.3 - Gingerbread</a></li>
+                        <li><a href="#">3.0 - Honeycomb</a></li>
+                        <li><a href="#">4.0 - Ice Cream Sandwich</a></li>
                         <li><a href="#">4.1 - Jelly Bean</a></li>
                         <li><a href="#">4.4 - KitKat</a></li>
                         <li><a href="#">5.0 - Lolipop</a></li>
@@ -73,10 +75,10 @@
                         <li><a href="#">8.0 - Oreo</a></li>
                         <li><a href="#">9.0 - Pie</a></li>
                     </ul>
-                </aside>
-                <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
-                </p>
-                <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+                    <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
+                    </p>
+                    <p>Acesse aqui o site <a href="#">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+                </div>
             </article>
         </section>
         <section>
