--- a/desafio10-Site/index.html
+++ b/desafio10-Site/index.html
@@ -8,21 +8,21 @@
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <header id="home">
         <h1>Curiosidades de Tecnologia</h1>
         <p>Tudo aquilo que você sempre quis saber sobre o mundo <br> Tech, em um único lugar.</p>
         <hr>
         <nav>
             <ul id="naveg">
-                <li><a href="#" class="navigation">Home</a></li>
-                <li><a href="#" class="navigation">Notícias</a></li>
-                <li><a href="#" class="navigation">Curiosidades</a></li>
-                <li><a href="#" class="navigation">Fale Conosco</a></li>
+                <li><a href="#home" class="navigation">Home</a></li>
+                <li><a href="#noticias" class="navigation">Notícias</a></li>
+                <li><a href="#curiosidades" class="navigation">Curiosidades</a></li>
+                <li><a href="#faleconosco" class="navigation">Fale Conosco</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
+        <section id="noticias">
             <article>
                 <h1> História do Mascote do Android</h1>
                 <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
@@ -52,7 +52,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/D703WB617WE?si=hV5Xoj7fXY0k6JQE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </article>
         </section>
-        <section>
+        <section id="curiosidades">
             <article >
                 <div>
                     <h5>Quer aprender mais? </h5>
@@ -87,6 +87,6 @@
             </article>
         </section>
     </main>
-    <footer>Site criado por Henrique Xavier, inspirado em Gustavo Guanabara para o CursoemVideo.</footer>
+    <footer id="faleconosco">Site criado por Henrique Xavier, inspirado em Gustavo Guanabara para o CursoemVideo.</footer>
 </body>
 </html>
