--- a/desafio11-Astronauta/index.html
+++ b/desafio11-Astronauta/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <div>
+    <main>
         <img id="astro" src="imagens/astronauta.png" alt="Foto de um Astronauta">
-    </div>
+    </main>
 </body>
 </html>
