--- a/desafio15-RedesSociais/index.html
+++ b/desafio15-RedesSociais/index.html
@@ -10,16 +10,18 @@
 <body>
     <nav>
         <ul>
-            <li><a href="imagens/tela-home.jpg" target="tela" ><img class="botao" src="imagens/logo-home.jpg" alt=""></a></li>
-            <li><a href=""><img class="botao" src="imagens/logo-github.jpg" alt=""></a></li>
-            <li><a href=""><img class="botao" src="imagens/logo-facebook.jpg" alt=""></a></li>
-            <li><a href=""><img class="botao" src="imagens/logo-instagram.jpg" alt=""></a></li>
-            <li><a href=""><img class="botao" src="imagens/logo-twitter.jpg" alt=""></a></li>
-            <li><a href=""><img class="botao" src="imagens/logo-youtube.jpg" alt=""></a></li>
+            <li><a href="telas/home.html" target="tela" ><img class="botao" id="bhome" src="imagens/logo-home.jpg" alt=""></a></li>
+            <li><a href="telas/github.html" target="tela"><img class="botao" src="imagens/logo-github.jpg" alt=""></a></li>
+            <li><a href="telas/facebook.html" target="tela"><img class="botao" src="imagens/logo-facebook.jpg" alt=""></a></li>
+            <li><a href="telas/instagram.html" target="tela"><img class="botao" src="imagens/logo-instagram.jpg" alt=""></a></li>
+            <li><a href="telas/twitter.html" target="tela"><img class="botao" src="imagens/logo-twitter.jpg" alt=""></a></li>
+            <li><a href="telas/youtube.html" target="tela"><img class="botao" src="imagens/logo-youtube.jpg" alt=""></a></li>
         </ul>
     </nav>
     <div id="celular">
-        <iframe src="" frameborder="0" name="tela"></iframe>
+        <iframe src="telas/home.html" frameborder="0" name="tela" scroll="none">
+            <p>Encontramos um erro. Seu navegador não é compatível</p>
+        </iframe>
     </div>
     
 </body>
