--- a/desafio15-RedesSociaisResposta/index.html
+++ b/desafio15-RedesSociaisResposta/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <main>
-        <section id="telefone"></section>
+        <section id="telefone">
+            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
+        </section>
         <section id="redes-sociais"></section>
     </main>
 </body>
