--- a/desafio15-RedesSociaisResposta/home.html
+++ b/desafio15-RedesSociaisResposta/home.html
@@ -14,7 +14,7 @@
             height: 100vh;
             width: 100vw;
 
-            background: black url(imagens/logo-home.jpg) no-repeat top;
+            background: black url(imagens/tela-home.jpg) no-repeat top;
             background-size: cover;
         }
     </style>
