quase terminando o mobile first

--- a/desafio16-TeladeLogin/index.html
+++ b/desafio16-TeladeLogin/index.html
@@ -16,22 +16,22 @@
         
         <section id="login-web">
             <h1>LOGIN</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora aspernatur, minus magni nulla cupiditate impedit, qui ipsam fuga facilis ipsa unde, necessitatibus consequatur est et sunt tenetur minima consectetur! Dolores?</p>
+            <p>Escreva as informações para fazer o login.</p>
             <form action="php/cadastro.php" method="post" autocomplete="on">
                 <div>
                     <div class="login-dados">
-                        <label for="iemail"><img src="imagens/accounticon.png" alt=""></label>
-                        <input type="text" name="email" id="iemail" autocomplete="email" required size="30">
+                        <label for="iemail"><img src="imagens/accounticon.png" alt="" ></label>
+                        <input type="text" name="email" id="iemail" autocomplete="email" required size="30" class="dados ">
                     </div>
                     <br>
                     <div class="login-dados">
-                        <label for="isenha"><img src="imagens/keyicon.png" alt=""></label>
-                        <input type="password" name="senha" id="isenha" required minlength="8" maxlength="20" size="30">
+                        <label for="isenha"><img src="imagens/keyicon.png" alt="" ></label>
+                        <input type="password" name="senha" id="isenha" required minlength="8" maxlength="20" size="30" class="dados ">
                     </div>
                 </div>
                 <div>
-                    <input type="submit" value="Entrar" size="30"> <br>
-                    <a href="">Esqueci a minha senha</a>
+                    <input type="submit" value="Entrar" class="entrar botao"> <br>
+                    <a href="" class="semsenha botao">Esqueci a minha senha</a>
                 </div>
             </form>
         </section>
