--- a/desafio16-TeladeLogin/index.html
+++ b/desafio16-TeladeLogin/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0&icon_names=lock" />
 
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     
@@ -30,7 +31,7 @@
                     </div>
                 </div>
                 <div>
-                    <input type="submit" value="Entrar" class="entrar botao"> <br>
+                    <input type="submit" value="Entrar" class="entrar botao"> <br id="espacobotao">
                     <a href="" class="semsenha botao">Esqueci a minha senha</a>
                 </div>
             </form>
